@@ -1,3 +1,8 @@
+2006-10-23  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* lily/tuplet-bracket.cc (calc_position_and_height): robustness:
+	detect suicide in nested tuplets.
+
 2006-10-23  Werner Lemberg  <wl@gnu.org>
 
 	* lily/pango-font.cc (Pango_font::pango_item_string_stencil): Fix
